fix bug with click handler executing too much and slowing down server

--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -144,3 +144,13 @@ margin: none;
     background-color: lightgray;
     cursor: pointer;
 }
+
+.search-background {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    background: transparent;
+    pointer-events: none;
+}
